// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StreetActionSelector> matches with the previous snapshot (big blind in preflop) 1`] = `
<RadioGroup
  buttonStyle="outline"
  onChange={[Function]}
  size="large"
  value={null}
>
  <ForwardRef(RadioButton)
    value="f"
  >
    Fold
  </ForwardRef(RadioButton)>
  <ForwardRef(RadioButton)
    value="c"
  >
    Check
  </ForwardRef(RadioButton)>
  <Styled(Component)
    active={false}
    onClick={[Function]}
    tabIndex={0}
    value="r"
  >
    Raise
    <styled.input
      active={false}
      defaultValue={2}
      max={99999999}
      min={2}
      onChange={[Function]}
      placeholder="1"
      tabIndex={-1}
      type="number"
    />
  </Styled(Component)>
</RadioGroup>
`;

exports[`<StreetActionSelector> matches with the previous snapshot (someone raised) 1`] = `
<RadioGroup
  buttonStyle="outline"
  onChange={[Function]}
  size="large"
  value={null}
>
  <ForwardRef(RadioButton)
    value="f"
  >
    Fold
  </ForwardRef(RadioButton)>
  <ForwardRef(RadioButton)
    value="c"
  >
    Call
  </ForwardRef(RadioButton)>
  <Styled(Component)
    active={false}
    onClick={[Function]}
    tabIndex={0}
    value="r"
  >
    Raise
    <styled.input
      active={false}
      defaultValue={23.5}
      max={99999999}
      min={23.5}
      onChange={[Function]}
      placeholder="22.5"
      tabIndex={-1}
      type="number"
    />
  </Styled(Component)>
</RadioGroup>
`;

exports[`<StreetActionSelector> matches with the previous snapshot 1`] = `
<RadioGroup
  buttonStyle="outline"
  onChange={[Function]}
  size="large"
  value={null}
>
  <ForwardRef(RadioButton)
    value="f"
  >
    Fold
  </ForwardRef(RadioButton)>
  <ForwardRef(RadioButton)
    value="c"
  >
    Check
  </ForwardRef(RadioButton)>
  <Styled(Component)
    active={false}
    onClick={[Function]}
    tabIndex={0}
    value="r"
  >
    Bet
    <styled.input
      active={false}
      defaultValue={1}
      max={99999999}
      min={1}
      onChange={[Function]}
      placeholder="0"
      tabIndex={-1}
      type="number"
    />
  </Styled(Component)>
</RadioGroup>
`;
